# pytemplate

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
test/: test_common.py
