[tool.poetry]
name = "modulename"
version = "0.1.0"
description = ""
authors = ["Dmitry Gritsenko <modulename@evtn.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/username/modulename"
homepage = "https://github.com/username/modulename"
keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"